# netcontrol

./: README.md  package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: exe_info_struct.rs  files_rules.rs  main.rs  new_rules.rs
