[package]
name = "netcontrol"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.3", features = [] }
rfd = "0.10.0"
tokio = { version = "1", features = ["full"] }
winapi = { version = "0.3",features = ["winuser"] }
[dependencies.windows]
version = "0.52.0"
features = [ "implement",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_NetworkManagement_WindowsFirewall" ]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
